cleaned up some css, tidied up some spacing and size issues

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -73,5 +73,5 @@ details {
 #wrap {
   margin-top: 100px;  /* Nav menu height */
   min-height: calc(100% - 100px - 475px);
-  margin-bottom: 400px; /* Footer height */
+  margin-bottom: 500px; /* Footer height */
 }
