--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -243,22 +243,6 @@ h2 {
   padding-top: 32vh;
 }
 
-.small-spacer {
-  padding-top: 30px;
-}
-
-.med-spacer {
-  padding-top: 60px;
-}
-
-.large-spacer {
-  padding-top: 100px;
-}
-
-.xlarge-spacer {
-  padding-top: 220px;
-}
-
 .spacer-half {
   padding-top: 16vh;
 }
